contact form template finalized

--- a/contact-form-tempate.html
+++ b/contact-form-tempate.html
@@ -43,3 +43,37 @@
 
 
 <div class="wp-block-button"> <a href="/buy-now" class="btn btn-primary btn-overview">Händler suchen</a></div>
+
+
+
+<div class="row p-5">
+    <div class="col-2">
+        <i class="fas fa-2x fa-map-marker-alt"></i>
+    </div>
+    <div class="col-10">
+        <h3>Adresse</h3>
+        <p>
+            Oberhof 13D<br>
+            DE-88138 Weissensberg
+        </p>
+    </div>
+    <br>
+    <div class="col-2">
+        <i class="fas fa-2x fa-phone"></i>
+    </div>
+    <div class="col-10">
+        <h3>Rufen Sie uns an</h3>
+        <p>
+            <a href="tel:+4983829110410" title="Jetzt anrufen">08382 9110410</a>
+        </p>
+    </div>
+    <div class="col-2">
+        <i class="far fa-2x fa-envelope"></i>
+    </div>
+    <div class="col-10">
+        <h3>Support E-Mail</h3>
+        <p>
+            <a href="mailto:info@cuciniale.com" title="Gleich Email schreiben">info@cuciniale.com</a>
+        </p>
+    </div>
+</div>
